--- a/css/layout.css
+++ b/css/layout.css
@@ -124,7 +124,6 @@ nav a:not(.logo) svg {
 footer {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
     justify-content: end;
     flex-wrap: wrap;
 	margin: 3rem;
